// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/UserProfile should match snapshot 1`] = `
<Fragment>
  <ProfilePopoverController
    hideStatus={false}
    overwriteName=""
    src="/api/v4/users/undefined/image?_=0"
    triggerComponentAs="button"
    triggerComponentClass="user-popover style--none"
    userId="user_id"
  >
    nickname
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/UserProfile should match snapshot, when displayUsername is enabled 1`] = `
<Fragment>
  <ProfilePopoverController
    hideStatus={false}
    overwriteName=""
    src="/api/v4/users/undefined/image?_=0"
    triggerComponentAs="button"
    triggerComponentClass="user-popover style--none"
    userId="user_id"
  >
    @username
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/UserProfile should match snapshot, when popover is disabled 1`] = `
<div
  className="user-popover"
>
  nickname
</div>
`;

exports[`components/UserProfile should match snapshot, when user is shared 1`] = `
<Fragment>
  <ProfilePopoverController
    hideStatus={false}
    overwriteName=""
    src="/api/v4/users/undefined/image?_=0"
    triggerComponentAs="button"
    triggerComponentClass="user-popover style--none"
    userId="user_id"
  >
    nickname
  </ProfilePopoverController>
  <SharedUserIndicator
    className="shared-user-icon"
    id="sharedUserIndicator-user_id"
  />
</Fragment>
`;

exports[`components/UserProfile should match snapshot, with colorization 1`] = `
<Fragment>
  <ProfilePopoverController
    hideStatus={false}
    overwriteName=""
    src="/api/v4/users/undefined/image?_=0"
    triggerComponentAs="button"
    triggerComponentClass="user-popover style--none"
    triggerComponentStyle={
      Object {
        "color": "#bbd279",
      }
    }
    userId="user_id"
  >
    nickname
  </ProfilePopoverController>
</Fragment>
`;
